--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,3 +7,11 @@ services:
     volumes:
       - ./backend:/app
       - /app/node_modules
+  frontend:
+    build: ./frontend
+    ports:
+      - "3000:3000"
+    volumes:
+      - ./frontend/src:/app/src
+    stdin_open: true
+    tty: true
