--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,7 +8,9 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
     "react-transition-group": "^4.3.0",
-    "axios": "^0.19.0"
+    "axios": "^0.19.0",
+    "@react-oauth/google": "^0.9.0",
+    "react-google-login": "^5.2.2"
   },
   "scripts": {
     "start": "react-scripts start",
