--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,8 @@
     "react-google-login": "^5.2.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^5.0.1",
-    "react-transition-group": "^4.3.0"
+    "react-transition-group": "^4.3.0",
+    "serve": "^14.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
